--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -4,50 +4,37 @@ include-file = $HOME/.config/polybar/themes/mocha.ini
 
 [settings]
 screenchange-reload = true
-pseudo-transparency = true
+format-offset = 10
 ;---------------------------------------
 
 
 
 
 ;----     Setting up bar config     ----
-[bar/example]
+[bar/i3wm]
+;-- monitor config --
+monitor = eDP
+wm-restack = i3
+override-redirect = false
+;-- dimensions --
 width = 100%
 height = 20pt
 radius = 0
-
-monitor = eDP
-
+line-size = 2pt
+border-size = 0pt
+padding = 0
+;-- color and text --
+font-0 = FiraCode Nerd Font:size=10;2
 background = ${colors.base}
 foreground = ${colors.text}
-
-line-size = 2pt
-
-border-size = 0pt
-
-padding-left = 0
-padding-right = 0
-
-module-margin = 1
-
-separator = |
-separator-foreground = ${colors.red}
-
-font-0 = FiraCode Nerd Font;2
-
+separator-foreground = ${colors.base}
+;-- modules --
+module-margin = 0.8
+separator = 
 modules-left = xworkspaces
-modules-right = pulseaudio battery wlan eth date
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-enable-ipc = true
-
-; wm-restack = generic
-; wm-restack = bspwm
-wm-restack = i3
-
-; override-redirect = true
+modules-center = time
+modules-right = pulseaudio battery wlan eth
+;enable-ipc = true
 ;---------------------------------------
 
 
@@ -56,7 +43,7 @@ wm-restack = i3
 ;----   Setting up modules config   ----
 [module/systray]
 type = internal/tray
-format-margin = 8pt
+format-margin = 0.8pt
 tray-spacing = 16pt
 
 [module/xworkspaces]
@@ -69,7 +56,7 @@ enable-scroll = false
 reverse-scroll = true
 ; style config
 label-active = %name%
-label-active-foreground = ${colors.text}
+label-active-foreground = ${colors.green}
 label-active-background = ${colors.surface0}
 label-active-underline = ${colors.green}
 label-active-padding = 1
@@ -89,67 +76,93 @@ label-empty-foreground = ${colors.text}
 label-empty-padding = 1
 
 [module/pulseaudio]
-type = internal/pulseaudio
 ; system config
-use-ui-max = false
+type = internal/pulseaudio
 ; style config
-format-volume-prefix = " "
-format-volume-prefix-foreground = ${colors.text}
-format-volume = <label-volume>
-label-muted-foreground = ${colors.text}
 label-volume = %percentage%%
+format-volume = <label-volume>
+format-volume-prefix = "  "
+format-volume-prefix-foreground = ${colors.yellow}
+format-volume-underline = ${colors.yellow}
+
 label-muted = muted
+label-muted-foreground = ${colors.yellow}
+label-muted-underline = ${colors.yellow}
 
 [network-base]
+; system config
 type = internal/network
 interval = 5
-format-connected = <label-connected>
+; style config
+label-disconnected = disconnected
 format-disconnected = <label-disconnected>
-label-disconnected = 󰤭 disconnected
+format-disconnected-prefix = "󰤭 "
+format-disconnected-prefix-foreground = ${colors.red}
+format-disconnected-foreground = ${colors.text}
+format-disconnected-underline = ${colors.red}
+
+format-connected = <label-connected>
+format-connected-prefix-foreground = ${colors.sky}
+format-connected-foreground = ${colors.text}
+format-connected-underline = ${colors.sky}
 
 [module/wlan]
+; system config
 inherit = network-base
 interface-type = wireless
-label-connected = 󰤥 %essid%
+; style config
+label-connected = %essid%
+format-connected-prefix = "󰤨 "
+
 
 [module/eth]
+; system config
 inherit = network-base
 interface-type = wired
-label-connected =   eth
+; style config
+label-connected = eth
+format-connected-prefix = " "
 
-[module/date]
+[module/time]
+; system config
 type = internal/date
 interval = 1
-
-date = %Y-%m-%d%
-time = %H:%M
-
-label = %date% %time%
+; style config
+date = %a %d %b %H:%M:%S
+label = %date%
 label-foreground = ${colors.text}
+
+format-prefix = " "
+format-prefix-foreground = ${colors.blue}
+format-underline= ${colors.blue}
 
 [module/battery]
 type = internal/battery
-
-full-at = 95
-
+; system config
+full-at = 98
+poll-interval = 1
 battery = BAT1
 adapter = ACAD
-
-poll-interval = 2
 time-format = %I:%M
-
-format-charging = <label-charging>
-format-charging-foreground = ${colors.text}
-format-charging-padding = 1
-
+; style config
+label-discharging = %percentage%%
 format-discharging = <label-discharging>
+format-discharging-prefix = " "
+format-discharging-prefix-foreground = ${colors.red}
 format-discharging-foreground = ${colors.text}
-format-discharging-padding = 1
+format-discharging-underline = ${colors.red}
 
 label-charging = %percentage%%
-label-discharging = %percentage%%
+format-charging = <label-charging>
+format-charging-prefix = " "
+format-charging-prefix-foreground = ${colors.green}
+format-charging-foreground = ${colors.text}
+format-charging-underline = ${colors.green}
 
-label-full = Charged
-label-full-foreground = ${colors.text}
-label-full-padding = 1
+label-full = charged
+format-full = <label-full>
+format-full-prefix = "󰁹 "
+format-full-prefix-foreground = ${colors.green}
+format-full-foreground = ${colors.text}
+format-full-underline = ${colors.green}
 ;---------------------------------------
