--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,6 @@
 # ----     Default system settings     -----
 
-font pango:FiraMono Nerd Font 8
+font pango:Hack Nerd Font 8
 
 # Start XDG autostart .desktop files using dex. See also
 exec --no-startup-id dex --autostart --environment i3
@@ -20,12 +20,8 @@ for_window [class="^.*"] border pixel 0
 
 # Start polybar
 exec --no-startup-id polybar
-# Start notify daemond
-exec --no-startup-id dunst
-# Start compositor
-exec --no-startup-id picom &
-# Set wallpaper
-exec_always feh --bg-fill ~/Pictures/Wallpapers/02.jpg
+# Init the auto start config
+exec_always --no-startup-id sh ~/.config/.autostart
 
 # ------------------------------------------
 
@@ -36,12 +32,15 @@ exec_always feh --bg-fill ~/Pictures/Wallpapers/02.jpg
 # Use pactl to adjust volume in PulseAudio.
 bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master 2%+
 bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master 2%-
+
 bindsym XF86AudioMute exec amixer -D pulse sset Master toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use brightnessctl to adjust brightness window
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+
+bindsym $mod+p exec --no-startup-id ~/.config/external_media/external_media
 
 # ------------------------------------------
 
