--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      FiraMono Nerd Font 
- bold_font        FiraMono Nerd Font Bold
- italic_font      FiraMono Nerd Font Medium Italic 
- bold_italic_font FiraMono Nerd Font Bold Italic
+ font_family      Hack Nerd Font 
+ bold_font        Hack Nerd Font Bold
+ italic_font      Hack Nerd Font Medium Italic 
+ bold_italic_font Hack Nerd Font Bold Italic
 
  font_size 10.0
 
