--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -4,7 +4,7 @@ include-file = $HOME/.config/polybar/themes/mocha.ini
 
 [settings]
 screenchange-reload = true
-format-offset = 10
+format-offset = 0
 ;---------------------------------------
 
 
@@ -13,9 +13,9 @@ format-offset = 10
 ;----     Setting up bar config     ----
 [bar/i3wm]
 ;-- monitor config --
-monitor = eDP
-wm-restack = i3
+monitor = ${env:MONITOR:}
 override-redirect = false
+
 ;-- dimensions --
 width = 100%
 height = 20pt
@@ -23,29 +23,33 @@ radius = 0
 line-size = 2pt
 border-size = 0pt
 padding = 0
+
 ;-- color and text --
-font-0 = FiraCode Nerd Font:size=10;2
+font-0 = Hack Nerd Font:size=10;2
 background = ${colors.base}
 foreground = ${colors.text}
 separator-foreground = ${colors.base}
+
 ;-- modules --
-module-margin = 0.8
+module-margin = 1
 separator = 
 modules-left = xworkspaces
 modules-center = time
 modules-right = pulseaudio battery wlan eth
-;enable-ipc = true
+enable-ipc = true
 ;---------------------------------------
 
 
 
 
 ;----   Setting up modules config   ----
+;---- System Tray ----
 [module/systray]
 type = internal/tray
 format-margin = 0.8pt
 tray-spacing = 16pt
 
+;---- Workspaces ----
 [module/xworkspaces]
 type = internal/xworkspaces
 ; system config
@@ -54,115 +58,117 @@ group-by-monitor = false
 enable-click = false
 enable-scroll = false
 reverse-scroll = true
+
 ; style config
 label-active = %name%
-label-active-foreground = ${colors.green}
-label-active-background = ${colors.surface0}
+label-active-foreground = ${colors.surface0}
+label-active-background = ${colors.green}
 label-active-underline = ${colors.green}
 label-active-padding = 1
 
 label-occupied = %name%
+label-occupied-foreground = ${colors.green}
 label-occupied-underline = ${colors.overlay0}
 label-occupied-padding = 1
 
-label-urgent = %name%
-label-urgent-foreground = ${colors.text}
-label-urgent-background = ${colors.surface0}
-label-urgent-underline = ${colors.red}
-label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.text}
-label-empty-padding = 1
-
-[module/pulseaudio]
-; system config
-type = internal/pulseaudio
-; style config
-label-volume = %percentage%%
-format-volume = <label-volume>
-format-volume-prefix = "  "
-format-volume-prefix-foreground = ${colors.yellow}
-format-volume-underline = ${colors.yellow}
-
-label-muted = muted
-label-muted-foreground = ${colors.yellow}
-label-muted-underline = ${colors.yellow}
-
-[network-base]
-; system config
-type = internal/network
-interval = 5
-; style config
-label-disconnected = disconnected
-format-disconnected = <label-disconnected>
-format-disconnected-prefix = "󰤭 "
-format-disconnected-prefix-foreground = ${colors.red}
-format-disconnected-foreground = ${colors.text}
-format-disconnected-underline = ${colors.red}
-
-format-connected = <label-connected>
-format-connected-prefix-foreground = ${colors.sky}
-format-connected-foreground = ${colors.text}
-format-connected-underline = ${colors.sky}
-
-[module/wlan]
-; system config
-inherit = network-base
-interface-type = wireless
-; style config
-label-connected = %essid%
-format-connected-prefix = "󰤨 "
-
-
-[module/eth]
-; system config
-inherit = network-base
-interface-type = wired
-; style config
-label-connected = eth
-format-connected-prefix = " "
-
+;---- Time ----
 [module/time]
 ; system config
 type = internal/date
 interval = 1
-; style config
-date = %a %d %b %H:%M:%S
-label = %date%
-label-foreground = ${colors.text}
 
-format-prefix = " "
-format-prefix-foreground = ${colors.blue}
+; style config
+date = %a %d %b
+time = %H:%M:%S
+label = "%date% | %time% "
+label-foreground = ${colors.base}
+
+format-prefix = "  "
+format-prefix-foreground = ${colors.base}
+format-background= ${colors.blue}
 format-underline= ${colors.blue}
 
-[module/battery]
-type = internal/battery
+;---- Pulseaudio ----
+[module/pulseaudio]
 ; system config
-full-at = 98
+type = internal/pulseaudio
+
+; style config
+label-volume = %percentage%%
+format-volume = " <label-volume> "
+format-volume-prefix = "   "
+format-volume-prefix-foreground = ${colors.base}
+format-volume-underline = ${colors.yellow}
+format-volume-foreground = ${colors.base}
+format-volume-background = ${colors.yellow}
+
+label-muted = muted
+label-muted-foreground = ${colors.base}
+label-muted-background = ${colors.yellow}
+label-muted-underline = ${colors.yellow}
+
+;---- Network Base ----
+[network-base]
+; system config
+type = internal/network
+interval = 5
+
+; style config
+label-disconnected = "Disconnected"
+format-disconnected = "<label-disconnected> "
+format-disconnected-prefix-foreground = ${colors.base}
+format-disconnected-foreground = ${colors.base}
+format-disconnected-background = ${colors.red}
+format-disconnected-underline = ${colors.red}
+format-disconnected-prefix = " 󰤭 "
+
+format-connected = "<label-connected> "
+format-connected-prefix-foreground = ${colors.base}
+format-connected-foreground = ${colors.base}
+format-connected-background = ${colors.sky}
+format-connected-underline = ${colors.sky}
+
+;---- WLAN ----
+[module/wlan]
+; system config
+inherit = network-base
+interface-type = wireless
+
+; style config
+label-connected = %essid%
+format-connected-prefix = " 󰤨 "
+
+;---- Battery ----
+[module/battery]
+; system config
+type = internal/battery
+full-at = 90
 poll-interval = 1
 battery = BAT1
 adapter = ACAD
 time-format = %I:%M
+
 ; style config
 label-discharging = %percentage%%
-format-discharging = <label-discharging>
-format-discharging-prefix = " "
-format-discharging-prefix-foreground = ${colors.red}
-format-discharging-foreground = ${colors.text}
+format-discharging = "<label-discharging> "
+format-discharging-prefix = " 󰁹 "
+format-discharging-prefix-foreground = ${colors.base}
+format-discharging-foreground = ${colors.base}
+format-discharging-background = ${colors.red}
 format-discharging-underline = ${colors.red}
 
 label-charging = %percentage%%
-format-charging = <label-charging>
-format-charging-prefix = " "
-format-charging-prefix-foreground = ${colors.green}
-format-charging-foreground = ${colors.text}
+format-charging = "<label-charging> "
+format-charging-prefix = " 󰁹 "
+format-charging-prefix-foreground = ${colors.base}
+format-charging-foreground = ${colors.base}
+format-charging-background = ${colors.green}
 format-charging-underline = ${colors.green}
 
-label-full = charged
+label-full = " charged "
 format-full = <label-full>
-format-full-prefix = "󰁹 "
-format-full-prefix-foreground = ${colors.green}
-format-full-foreground = ${colors.text}
+format-full-foreground = ${colors.base}
+format-full-background = ${colors.green}
 format-full-underline = ${colors.green}
 ;---------------------------------------
+
